nit: use Java 9 collections factories